Implement signing and errors